--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ i {
 
 .headerIcons a:hover i {
   animation: translateY 0.8s infinite alternate;
-  color: #d34040;
+  color: #fbff03;
 }
 
 @keyframes translateY {
@@ -47,8 +47,8 @@ i {
 }
 
 .headerButton:hover {
-  border: 1px solid #d34040;
-  background-color: #d34040;
+  border: 1px solid #415634;
+  background-color: #415634;
 }
 
 .headerLogo {
@@ -91,7 +91,7 @@ i {
   content: "";
   display: block;
   position: absolute;
-  background-image: linear-gradient(to bottom, rgba(6, 18, 30, 0.1), #06121e), url("../assets/bg.svg");
+  background-image:  url("./assets/bg.svg");
   left: 0;
   top: 0;
   width: 100%;
@@ -100,7 +100,7 @@ i {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 0;
-  opacity: 0.9;
+  
 }
 
 .hero {
@@ -126,7 +126,7 @@ i {
 .buttonContact {
   padding: 14px 28px;
   color: #ffffff;
-  background-color: #d94140;
+  background-color: #415634;
   border: 0;
   font-size: 18px;
   font-weight: 600;
@@ -201,7 +201,7 @@ i {
   }
 }
 .services {
-  background-color: #ffffff;
+  background-color: #dfdfdf;
   color: #232224;
   display: flex;
   flex-direction: column;
@@ -217,11 +217,29 @@ i {
   margin-bottom: 14px;
 }
 
+.servicesContent h3 {
+  text-align: center;
+  font-size: 28px;
+  margin-bottom: 14px;
+}
+
 .servicesContent p {
   line-height: 150%;
   margin-bottom: 14px;
   text-align: center;
   max-width: 780px;
+}
+
+.tituloWork
+{
+  display: flex;
+  justify-content: center; 
+  width: 100%;
+}
+
+.tituloWork hr
+{
+ width: 100vw; 
 }
 
 .hairCuts {
